1998-10-16  Jim Blandy  <jimb@zwingli.cygnus.com>

	* stime.c: The CPP hair to determine a value for CLKTCK is weird,
	and is now broken under NetBSD.  I can't fathom what it's trying
	to do, so I've replaced it with something that I do understand,
	which seems to work, and which isn't broken on NetBSD.  "Progress?
	You Decide."  (Thanks to Perry Metzger.)

	* regex-posix.c (scm_regexp_exec): Add a cast to remove a
	signed/unsigned comparison.

1998-10-15  Jim Blandy  <jimb@zwingli.cygnus.com>

	Warning fixes from Greg Harvey:
	* unif.c (scm_array_set_x): initializer for pos
	* throw.c (scm_ithrow): added initializer for jmpbuf (SCM_UNDEFINED)
	* struct.c (scm_struct_ref, scm_struct_set_x): Added
	initializers for field_type, since EGCS so desparately wants to
	play dumb
	* debug.h (scm_make_gloc, scm_gloc_p, scm_make_iloc, scm_memcons,
	scm_mem_to_proc, scm_proc_to_mem, scm_debug_hang): Added prototypes
	when GUILE_DEBUG is defined.
	* dynwind.h (scm_wind_chain): Same.
	* ports.h (scm_pt_size, scm_pt_member): Same.
	* print.h (scm_current_pstate): Same.
	* procs.h (scm_make_cclo): Same.

1998-10-14  Jim Blandy  <jimb@zwingli.cygnus.com>

	Handle short and long long uniform arrays properly.  (Thanks to
	Clark McGrew.)
	* ramap.c (scm_ra_matchp, scm_array_fill_int, scm_array_index_map_x,
 	raeql_1): Add cases for scm_tc7_svect (short vectors) and
	scm_tc7_llvect (long long vectors).

	Change the way libguile and boot-9.scm are timestamped, to try to
	get rid of these spurious mismatch warnings.  Now both
	libguile/versiondat.h and ice-9/version.scm are generated directly
	by the configuration process, rather than having version.scm
	generated directly, and libguile/versiondat.h generated by the
	Makefile, which is generated by configure.  It seems that
	sometimes the Makefile would change, but versiondat.h depends on
	Makefile.in, not Makefile, so it wouldn't get rebuilt.
	* Makefile.am (versiondat.h): Target removed; this is generated